sidecar/allow-any.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: client-egress
  namespace: shop
spec:
  outboundTrafficPolicy:
    mode: ALLOW_ANY
  egress: [{hosts: [./*, istio-system/*]}]
