sidecar/import-service.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: client-egress
  namespace: shop
spec:
  workloadSelector:
    labels:
      app: client
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress: [{hosts: [./*, istio-system/*, payments/api.payments.svc.cluster.local]}]
